# gnome-common

./: .cvsignore  .gitignore  ChangeLog  MAINTAINERS  Makefile.am  README  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  gnome-common.doap  gnome-common.pc.in  gnome-common.spec  gnome-common.spec.in
doc/: usage.txt
doc-build/: .cvsignore  Makefile.am  gnome-doc-common.in  omf.make
hack-macros/: gnome.m4  nautilus-macros.m4
intl/: .cvsignore  Makefile.in
macros/: ChangeLog  Makefile.am  autogen.sh  balsa-offset-tool.m4  gnome-conduit-check.m4  gnome-libgtop-check.m4  offset-tool.sh.in
macros2/: .cvsignore  ChangeLog  Makefile.am  autogen.sh  check-utmp.m4  compiler-flags.m4  curses.m4  gnome-autogen.sh  gnome-code-coverage.m4  gnome-common.m4  gnome-compiler-flags.m4  gnome-deprecated-macros.m4  gnome-gettext.m4  gnome-gnorba-check.m4  gnome-pkgconfig.m4  gnome-platform.m4  gnome-x-checks.m4  gnome.m4
support/: .cvsignore  ChangeLog  Makefile.am  README-gnome  argp-fmtstream.h  argp-help.c  argp-parse.c  argp.h  argp.texi  canonicalize.c  easy-vsnprintf.c  error.c  findme.c  findme.h  getopt.c  getopt.h  getopt1.c  gnome-argp.c  gnome-argp.h  gnome-support-2.0.pc.in  gnomesupport-fake.h  gnomesupport-h.c  gnomesupport.awk  memmove.c  mkstemp.c  popt-gnome.h  popt.c  poptconfig.c  popthelp.c  poptint.h  poptparse.c  scandir.c  strerror.c  strtod.c  strtol.c  strtoul.c  system.h  vasprintf.c  vsnprintf.c
