AC_PREREQ(2.54)
AC_INIT([gnome-common], [2.20.1],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-common])

AC_CONFIG_SRCDIR([macros2/gnome-autogen.sh])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AC_CONFIG_FILES([
Makefile
gnome-common.spec
macros2/Makefile
doc-build/Makefile
doc-build/gnome-doc-common
])

AC_OUTPUT
