AC_PREREQ(2.54)
AC_INIT([gnome-common], [3.5.91],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-common])

AC_CONFIG_SRCDIR([macros2/gnome-autogen.sh])

AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([no])])

if test -z "$enable_maintainer_mode"; then
  enable_maintainer_mode=yes
fi
AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
macros2/Makefile
doc-build/Makefile
doc-build/gnome-doc-common
])

AC_OUTPUT
